<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="com.spundev.popularmovies.DetailActivityFragment.DetailFragmentHandlers" />

        <variable
            name="movie"
            type="com.spundev.popularmovies.model.TMDBMovie" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/detail_padding">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/detail_section_margin"
            android:text="@{movie.title}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="Movie title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster_imageView"
                android:layout_width="@dimen/detail_poster_width"
                android:layout_height="@dimen/detail_poster_height"
                android:contentDescription="@string/movie_poster_description"
                android:src="@drawable/placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/detail_info_left_padding"
                android:layout_marginStart="@dimen/detail_info_left_padding"
                android:orientation="vertical">

                <!-- Release date -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/detail_info_icon_margin"
                        android:layout_marginRight="@dimen/detail_info_icon_margin"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_calendar_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{movie.releaseDate}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            tools:text="00-00-0000" />

                        <TextView
                            android:id="@+id/release_date_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_release_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            tools:text="Release date" />
                    </LinearLayout>
                </LinearLayout>


                <!-- Vote average -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detail_info_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/detail_info_icon_margin"
                        android:layout_marginRight="@dimen/detail_info_icon_margin"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_rated_gray_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{movie.voteAverage}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            tools:text="0.0" />


                        <TextView
                            android:id="@+id/vote_average_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_vote_average"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            tools:text="Vote average" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/addToFavoritesButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/detail_favoriteBtn_marginTop"
                    android:drawableLeft="@drawable/ic_favorites_24dp"
                    android:drawablePadding="@dimen/detail_favoriteBtn_drawablePadding"
                    android:drawableStart="@drawable/ic_favorites_24dp"
                    android:onClick="@{handlers::onClickAddToFavorites}"
                    android:text="@string/add_to_favorites_button"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/removeFromFavoritesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/detail_favoriteBtn_marginTop"
                    android:drawableLeft="@drawable/ic_favorites_24dp"
                    android:drawablePadding="@dimen/detail_favoriteBtn_drawablePadding"
                    android:drawableStart="@drawable/ic_favorites_24dp"
                    android:onClick="@{handlers::onClickRemoveFromFavorites}"
                    android:text="@string/remove_favorites_button"
                    android:visibility="gone" />


            </LinearLayout>

        </LinearLayout>

        <!-- Overview -->
        <TextView
            android:id="@+id/overview_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/detail_section_margin"
            android:layout_marginTop="@dimen/detail_section_margin"
            android:text="@string/info_overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            tools:text="Overview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{movie.overview}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Overview text" />


        <View style="@style/lineDivider" />

        <!-- Videos -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/detail_section_margin"
            android:text="@string/info_videos"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />


        <TextView
            android:id="@+id/videosEmptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/info_empty_videos"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <ProgressBar
            android:id="@+id/videosProgressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/videos_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/list_item_info_movie_video" />


        <View style="@style/lineDivider" />

        <!-- Reviews -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/detail_section_margin"

            android:text="@string/info_reviews"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/reviewsEmptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/info_empty_reviews"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <ProgressBar
            android:id="@+id/reviewsProgressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviews_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item_info_movie_review" />
    </LinearLayout>
</layout>